# advent-of-code

./: Cargo.toml
2023/: .gitignore  Cargo.toml  justfile
2023/daily-template/: Cargo.toml
2023/day-02/src/: part2.rs
2023/day-04/: Cargo.toml
2023/day-04/src/: part2.rs
2023/day-05/: Cargo.toml
2023/day-05/src/: part2.rs
2023/day-06/src/: part1.rs
2023/day-07/src/: part1.rs
2023/day-08/: Cargo.toml
2023/day-10/: Cargo.toml
2025/rust/: Cargo.toml  day-01.bench.txt
2025/rust/daily-template/: cargo-generate.toml
2025/rust/daily-template/src/: part1.rs  part2.rs
2025/rust/day-01/src/: part1.rs  part2.rs
2025/rust/day-02/src/: part1.rs  part2.rs
2025/rust/day-03/src/: part1.rs  part2.rs
2025/rust/day-04/src/: part1.rs  part2.rs
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-02/: Cargo.toml
day-02/src/: part1.rs
day-03/: Cargo.toml
day-03/src/: part1.rs
day-04/src/: lib.rs  part1.rs  part2.rs  scratch_card.rs
day-05/src/: part1.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-08/src/: part1.rs
day-09/: Cargo.toml
day-09/src/: part1.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
