[package]
name = "day-10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.2", features = ["scalar-math", "fast-math"] }
itertools = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
rstest = { workspace = true }
